# ttcan_slave

./: .gitignore  CMakeLists.txt  README.md
docs/: software_requirements.md
src/: ttcan_scheduler.h  ttcan_slave_driver.c  ttcan_slave_driver.h
src/private/: ttcan_dl_types.h
tests/: CMakeLists.txt
tests/functionality/: master_node_sim.cpp  register_node.cpp
tests/mock/: config_ttcan.h  mock_target.h  ttcan_schedule.h
tests/mock/fakes/: fake_handlers.h  fake_hw_can.c  fake_hw_nvm.c  fake_hw_timer.cpp
